// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`runGem2s action Dispatches events properly 1`] = `
Array [
  Object {
    "payload": Object {
      "experimentId": "experiment-id",
    },
    "type": "backendStatus/backendStatusLoading",
  },
  Object {
    "payload": Object {},
    "type": "experimentSettings/startPipeline",
  },
  Object {
    "payload": Object {
      "experimentId": "experiment-id",
      "experimentName": "Mock experiment",
      "sampleIds": Array [
        "sample-1",
        "sample-2",
      ],
    },
    "type": "experimentSettings/updateInfo",
  },
]
`;

exports[`runGem2s action Dispatches status error if loading fails 1`] = `
Array [
  Object {
    "payload": Object {
      "experimentId": "experiment-id",
    },
    "type": "backendStatus/backendStatusLoading",
  },
  Object {
    "payload": Object {
      "error": "Could not start gem2s.",
      "errorType": "some weird error that happened",
    },
    "type": "backendStatus/backendStatusError",
  },
]
`;
